# rust_by_templates

./: Cargo.toml  README.md
recipes/async/: README.md
recipes/async/background_interval_task/: Cargo.toml  README.md
recipes/async/background_interval_task/src/: main.rs
recipes/async/try_with_timeout/: Cargo.toml  README.md
recipes/async/try_with_timeout/src/: errors.rs  main.rs
recipes/bindings/: README.md
recipes/bindings/rust_bindings/: Cargo.toml  README.md  main.py  pyproject.toml
recipes/bindings/rust_bindings/src/: lib.rs
recipes/generics/stack/: Cargo.toml
recipes/http/: README.md
recipes/http/axum_custom_extractors/: README.md
recipes/http/axum_middleware/: Cargo.toml  README.md
recipes/http/axum_middleware/src/: errors.rs  main.rs  middleware.rs
recipes/http/axum_openapi/: Cargo.toml  README.md
recipes/http/axum_openapi/src/: errors.rs  main.rs  schema.rs
recipes/http/axum_tracing/: Cargo.toml  README.md
recipes/http/axum_tracing/src/: environment.rs  main.rs  schema.rs
recipes/lifetimes/structs_with_lifetime/: Cargo.toml
recipes/lifetimes/structs_with_lifetime/src/: main.rs  schema.rs
recipes/recursion/fibonacci/: Cargo.toml
recipes/serde/read_write_json/: README.md
recipes/test_framework/parametrization/: Cargo.toml  README.md
recipes/test_framework/parametrization/src/: main.rs  test.rs
recipes/traits/eq_and_ordering/: README.md
recipes/traits/from_and_into/: Cargo.toml  README.md
recipes/traits/impl_display/: Cargo.toml  README.md
recipes/traits/iterator_trait/: Cargo.toml  README.md
(+16 files in other folders)
