[workspace]
members = [
	# Structs
	"recipes/structs/validation",
	# HTTP
	"recipes/http/axum_basic",
	# Testing
	"recipes/test_framework/parametrization",
	# Serialization
	"recipes/serde/read_write_json",
	# Traits
	"recipes/traits/impl_display",
	"recipes/traits/eq_and_ordering",
	"recipes/traits/iterator_trait",
	"recipes/traits/from_and_into",
	]
resolver = "3"
