[workspace]
members = [
	# Structs
	"recipes/structs/validation",
	# HTTP
	"recipes/http/axum_basic",
	"recipes/http/axum_custom_extractors",
	"recipes/http/axum_openapi",
	"recipes/http/axum_tracing",
	"recipes/http/axum_middleware",
	# Testing
	"recipes/test_framework/parametrization",
	# Serialization
	"recipes/serde/read_write_json",
	# Traits
	"recipes/traits/impl_display",
	"recipes/traits/eq_and_ordering",
	"recipes/traits/iterator_trait",
	"recipes/traits/from_and_into",
	# Async
	"recipes/async/try_with_timeout",
	"recipes/async/closures",
	"recipes/async/background_interval_task",
	# Recursion
	"recipes/recursion/sorting",
	"recipes/recursion/fibonacci",
	# Generics
	"recipes/generics/structs",
	"recipes/generics/stack",
	]

resolver = "3"
